--- a/styles.css
+++ b/styles.css
@@ -3,62 +3,188 @@
     padding: 0;
     transition-duration: 0.5s;
 }
-
+#horizontal{
+    margin: 0 6em 0 6em;
+}
 .background {
     background-image: url(images/background.svg);
     background-size: cover;
     height: 100vh;
     width: 100%;
     overflow: hidden;
+    border-bottom: 1px solid;
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 0 5% 0 5%;
+    
 }
-
 .nav button {
     background-color: white;
     padding: 15% 30% 15% 30%;
-    margin-top: 30%;
     border: solid 1px blue;
     border-radius: 10px;
     color: blue;
+    transition: 0.05s;
+}
+.nav button:hover{
+    background-color: rgb(49 46 129);
+    color: white;
+    transform: scale(1.04);
+    
+}
+@media (max-width: 768px) {
+    .nav img{
+        width: 90%;
+        margin-top: .5em;
+        
+    }
+    .nav {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+  
+    
+    
 }
 
+@media (max-width: 480px) {
+    .nav img{
+        width: 90%;
+        margin-top: .5em;
+        
+    }
+    .nav {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+}
+
+
 .sec1 {
-    /* background-color: aqua; */
     height: 100vh;
     margin: 0 5% 0 5%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+   display: flex;
     gap: 1em;
 }
 
+.subsec2:hover{
+    scale: 1.1;
+}
 .subsec1 {
-    /* background-color: aquamarine; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: left;
     width: 80%;
+    margin-bottom: 10em;
 }
-
+#welcomemob{
+    display: none;
+}
 .subsec1 h1 {
     font-size: 4.5rem;
     line-height: 1;
+    width: 50%;
+}
+.highlight-text {
+    display: inline-block;
+    font-size: 36px;
+    font-weight: bold;
+    color: #333;
+    background: linear-gradient(to right, #f1f814, #e1e71c); 
+    background-size: 0% 100%;  
+    border-radius: 10px;
+    background-position: left center;  
+    background-repeat: no-repeat;
+   
+    animation: highlight-animation 4s ease-in-out infinite; /* Animation properties */
 }
 
+@keyframes highlight-animation {
+    0% {
+        background-size: 0% 100%; /* Start with no highlight */
+    }
+    50% {
+        background-size: 100% 100%; /* Highlight reaches full width at halfway */
+    }
+    100% {
+        background-size: 0% 100%; /* Highlight resets at the end */
+    }
+}
 .subsec1 p {
-    font-size: 1rem;
+    margin-top: 20px;
+    font-size: 1.2rem;
     line-height: 1.5rem;
 }
 
-.subsec2 {
-    /* background-color: aquamarine; */
+@media (max-width: 768px) {
+    
+.sec1 {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+#welcomepc{
+    display: none;
+}
+#welcomemob{
+    display: block;
+}
+.subsec1 { 
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    margin-bottom: 10em;
+}
+
+.subsec1 h1 {
+    font-size: 1.5rem;
+    line-height: 1;
+    width: 50%;
+}
+.highlight-text {
+    display: inline-block;
+    font-size: 36px;
+    font-weight: bold;
+    color: #333;
+    background: linear-gradient(to right, #f1f814, #e1e71c); 
+    background-size: 0% 100%;  
+    border-radius: 10px;
+    background-position: left center;  
+    background-repeat: no-repeat;
+   
+    animation: highlight-animation 4s ease-in-out infinite; /* Animation properties */
+}
+
+@keyframes highlight-animation {
+    0% {
+        background-size: 0% 100%; /* Start with no highlight */
+    }
+    50% {
+        background-size: 100% 100%; /* Highlight reaches full width at halfway */
+    }
+    100% {
+        background-size: 0% 100%; /* Highlight resets at the end */
+    }
+}
+.subsec1 p {
+    margin-top: 20px;
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+}
 
 }
+
+@media (max-width: 480px) {
+    
+}
+
 
 .marqee1 {
     text-align: center;
@@ -104,7 +230,7 @@
 .section h3 {
     font-size: 15px;
     line-height: 1.75rem;
-    color: rgb(67 56 202)
+    color: rgb(67 56 202);
 }
 
 .serving {
@@ -112,6 +238,7 @@
     justify-content: center;
     align-items: center;
     gap: 20em;
+    background-color: ;
 
 }
 
@@ -139,19 +266,24 @@
 .info {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: start;
     border: solid rgb(209 213 219) 1px;
     border-radius: 0.5rem;
-    padding: 1.25rem;
+    padding: 1rem;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
-
+.info:hover{
+    scale: 1.1;
+    background-color: rgba(192, 189, 189, 0.448);
+    border: black solid 1px;
+}
 .info h1 {
     font-size: 15px;
 }
 
 .info img {
     width: 2.5rem;
+    margin-right: 1em;
     height: auto;
 }
 
@@ -167,17 +299,16 @@
 .subsection2 {
     display: flex;
     gap: 2.5rem;
-
+margin: 0 5em 0 5em;
 }
 
 .subsec2 {
     flex-basis: 50%;
 }
-
-.subsec2 img {
-    width: 90%;
-    height: auto;
+.subsec2 img{
+    width: 100%;
 }
+
 
 #hrline {
     width: 100%;
@@ -185,38 +316,43 @@
 
 .subsec21 {
     width: 40%;
+    margin-top: 10em;
 }
 
 .subsec21111 {
-    /* background-color: aqua; */
     padding: 1em;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
+/* .hoverblock{
+display: none;
+}
+.subsec211:hover{
+display: block;
+} */
 span img {
     width: 20px;
 }
 
 #how {
+    margin-top: 2em;
     text-align: center;
 }
 
 .step h3 {
-    font-size: 15px;
+    font-size: 16px;
     line-height: 1.75rem;
     color: rgb(67 56 202);
-    margin-bottom: 1.25rem;
-    margin: 3rem;
+    margin-bottom: 1rem;
+    margin-left:3rem ;
+    margin-top: 1rem;
 }
 
 .stepsec {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* flex-basis: 50%; */
     margin: 0% 10% 0 10%;
 }
 
@@ -237,6 +373,7 @@ span img {
 
 .stepsec img {
     width: 300px;
+    scale: 1.1;
 }
 
 #aboutimg {
@@ -250,6 +387,11 @@ span img {
     border-width: 1px;
     border-radius: 0.5rem;
     background-color: rgb(49 46 129);
+}
+.stepright button:hover{
+    background-color:white;
+    color:  rgb(31, 25, 216);
+    border-width: 2px;
 }
 
 .contactus {
@@ -272,6 +414,11 @@ span img {
     border-width: 1px;
     border-radius: 0.5rem;
     background-color: rgb(49 46 129);
+}
+.contactus button:hover{
+    background-color:white;
+    color:  rgb(31, 25, 216);
+    border-width: 2px;
 }
 
 .footer {
