--- a/styles.css
+++ b/styles.css
@@ -70,19 +70,24 @@
     height: 100vh;
     margin: 0 5% 0 5%;
    display: flex;
-    gap: 1em;
+   justify-content: center;
+   /* align-items: center; */
+    /* gap: 5em; */
 }
-
+#animation{
+    width:50vw;
+}
 .subsec2:hover{
     scale: 1.1;
 }
 .subsec1 {
+    margin-top: 10em;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: left;
-    width: 80%;
-    margin-bottom: 10em;
+    margin-bottom: 1em;
+    
 }
 #welcomemob{
     display: none;
@@ -117,7 +122,7 @@
         background-size: 0% 100%; /* Highlight resets at the end */
     }
 }
-.subsec1 p {
+.sec1 p {
     margin-top: 20px;
     font-size: 1.2rem;
     line-height: 1.5rem;
@@ -129,25 +134,22 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+    align-items:center;
+    justify-content:center;
 }
-#welcomepc{
-    display: none;
-}
-#welcomemob{
-    display: block;
-    font-size: 1.2em;
-    text-align: center;
-    margin-top: 20px;
-    line-height: 1.5rem;
+
+#animation{
+    width: 25em;
 }
 .subsec1 { 
     display: flex;
     flex-direction: row;
-    align-items:flex-end;
-    justify-content:right;
+    align-items:center;
+    justify-content:center;
     overflow: hidden;
-    margin-bottom: 10em;
-    margin: 2em 0em 0 1.2em;
+    margin-bottom: 0em;
+    margin: 2em 2em 0 0em;
+    margin-top: 0em;
 }
 
 .subsec1 h1 {
@@ -158,7 +160,7 @@
 
 }
 .subsec1 h1:first-child{
-    margin-left: 1.8em;
+    margin-left: 2em;
 }
 
 .highlight-text {
@@ -185,9 +187,7 @@
         background-size: 0% 100%; /* Highlight resets at the end */
     }
 }
-.subsec1 p {
-   
-}
+
 
 }
 
@@ -407,10 +407,14 @@
 
 .subsection2 {
     display: flex;
-    gap: 2.5rem;
-margin: 0 5em 0 5em;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5em 0 5em;
 }
-
+#faq{
+    width: 25vw;
+    margin-left: 5vw;
+}
 .subsec2 {
     flex-basis: 50%;
 }
@@ -425,7 +429,6 @@ margin: 0 5em 0 5em;
 
 .subsec21 {
     width: 40%;
-    margin-top: 10em;
 }
 
 .subsec21111 {
@@ -477,7 +480,10 @@ span img {
         justify-content: space-between;
         align-items: center;
     }
-    
+    #faq{
+        width: 18em;
+        margin: 5vw;
+    }
     span img {
         width: 15px;
     }
@@ -507,8 +513,9 @@ span img {
 
 .stepsec1 {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 10em;
     margin: 0% 10% 0 10%;
 }
 
@@ -543,7 +550,8 @@ span img {
 
 .stepsec2 {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 10em;
     align-items: center;
     margin: 0% 10% 0 10%;
 }
@@ -581,7 +589,8 @@ span img {
 
 .stepsec3 {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 5em;
     align-items: center;
     margin: 0% 10% 0 10%;
 }
@@ -599,6 +608,7 @@ span img {
 .stepsec3 p {
     font-size: 1.125rem;
     line-height: 1.75rem;
+    width: 80%;
 }
 
 .stepsec3 img {
@@ -606,52 +616,43 @@ span img {
     scale: 1.1;
 }
 
+
 .stepsec4 {
+   
     display: flex;
-    flex-direction: row;
     justify-content: center;
+    gap: 5em;
     align-items: center;
-    margin: 1.5em;
+    margin: 5% 10% 0 10%;
 }
+
+.stepright4 {
+    width: 50%;
+}
+
 .stepsec4 h2 {
     font-size: 3rem;
-    text-align: center;
     line-height: 1;
-    margin: 1rem 0 1rem 0;
+    margin-bottom: 1.25rem;
 }
 
 .stepsec4 p {
-    display: flex;
-    flex-direction: column;
-    gap: 2em;
-    justify-content: center;
-    font-size: 1.1rem;
-    line-height: 1.3rem;
-    margin-bottom: 1.5rem;
-    text-align: start;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    margin-bottom: 1em;
 }
-.stepright4{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+
+.stepsec4 img {
+    width: 35em;
+    scale: 1.1;
 }
+
+
 .stepright4 button{
 padding: 0.5rem 1rem 0.5rem 1rem;
 border-radius: 5px;
 }
-#aboutimg {
-    width: 40%;
-}
-.stepleft4{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 3em;
-}
-.stepleft4 p{
-    width: 40%;
-    text-align: left;
-}
+
 .stepright4 button {
     padding: 0.5rem 1rem 0.5rem 1rem;
     color: white;
@@ -685,10 +686,11 @@ border-radius: 5px;
 
 .stepsec1 {
     display: flex;
+    gap: 2em;
     flex-direction: column;
     justify-content: space-between;
     align-items: start;
-    margin: 1.5em;
+    margin: 1em;
 }
 .stepright1 {
     width: 100%;
@@ -697,7 +699,7 @@ border-radius: 5px;
 .stepsec1 h2 {
     font-size: 2rem;
     line-height: 1;
-    margin: 1rem 0 1rem 0;
+    margin: 0rem 0 1rem 0;
 }
 
 .stepsec1 p {
@@ -729,7 +731,8 @@ border-radius: 5px;
     flex-direction: column-reverse;
     justify-content: space-between;
     align-items: start;
-    margin: 1.5em;
+    margin: 1em;
+    gap: 2em;
 }
 .stepright2 {
     width: 100%;
@@ -771,7 +774,8 @@ border-radius: 5px;
     flex-direction: column;
     justify-content: space-between;
     align-items: start;
-    margin: 1.5em;
+    margin: 1em;
+    gap: 2em;
 }
 .stepright3 {
     width: 100%;
@@ -793,55 +797,59 @@ border-radius: 5px;
     width: 300px;
     scale: 1.1;
 }
-
-
 .stepsec4 {
+   
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 1.25em;
     align-items: center;
-    margin: 1.5em;
+    margin: 5% 10% 0 10%;
 }
+
+.stepright4 {
+    width: 100%;
+}
+
 .stepsec4 h2 {
-    font-size: 3rem;
+    font-size: 2rem;
     text-align: center;
     line-height: 1;
-    margin: 1rem 0 1rem 0;
+    margin-bottom: 1rem;
 }
 
-
-.stepright4{
-    display: flex;
-    flex-direction: column;
+.stepsec4 p {
+    font-size: 1.125rem;
+    line-height: 1.25rem;
     text-align: center;
+    margin-bottom: 0em;
 }
+
+.stepsec4 img {
+    width: 20em;
+    scale: 1.1;
+}
+
+
 .stepright4 button{
 padding: 0.5rem 1rem 0.5rem 1rem;
 border-radius: 5px;
 }
-#aboutimg {
-    width: 100%;
-}
-.stepleft4{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 3em;
-}
-.stepleft4 p{
-    font-size: 1rem;
-    width: 100%;
-    text-align: start;
-}
-.stepright4 button {
+
+.stepright4 button{
     padding: 0.5rem 1rem 0.5rem 1rem;
     color: white;
     margin-top: 0rem;
     border-width: 1px;
     border-radius: 0.5rem;
     background-color: rgb(49 46 129);
-    
+}
+#welcomepc{
+    display: flex;
+    margin-top: 2em;
+    flex-direction: column;
+    align-items:center;
+    justify-content:center;
 }
 .stepright4 button:hover{
     background-color:white;
@@ -884,7 +892,7 @@ border-radius: 5px;
 @media (max-width: 768px) {
     .contactus {
         padding: 1rem;
-        margin:0;
+        margin-top:4em;
         border-radius: 0rem;
         background-color: rgb(229 234 247);
         display: flex;
